--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,10 @@
   ],
   "background": {
     "scripts": [
-      "background/tabmarks.js"
+      "background/helpers/bookmarks.js",
+      "background/helpers/tabs.js",
+      "background/main.js",
+      "background/tabs-sync.js"
     ]
   },
   "browser_action": {
