Sync tab creation/updating to bookmarks

--- a/manifest.json
+++ b/manifest.json
@@ -16,6 +16,7 @@
   "background": {
     "scripts": [
       "background/helpers/bookmarks.js",
+      "background/helpers/groups.js",
       "background/helpers/tabs.js",
       "background/main.js",
       "background/tabs-sync.js"
