--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,10 @@
 {
+  "applications": {
+    "gecko": {
+      "id": "tabmarks@bitgarten.ch",
+      "strict_min_version": "52.0"
+    }
+  },
   "manifest_version": 2,
   "name": "Tabmarks",
   "version": "1.0.0",
