--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Web Extension for handling groups of tabs persisted as bookmarks",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "web-ext run",
     "lint": "eslint .",
-    "build": "web-ext build --ignore-files=package.json yarn.lock --overwrite-dest",
+    "build": "web-ext build --ignore-files=package.json yarn.lock \"**/*.test.js\" --overwrite-dest",
     "sign": "web-ext sign --api-key=$AMO_JWT_ISSUER --api-secret=$AMO_JWT_SECRET"
   },
   "repository": {
@@ -25,6 +25,7 @@
     "eslint": "^4.4.1",
     "eslint-config-airbnb-base": "^11.3.1",
     "eslint-plugin-import": "^2.7.0",
+    "jest": "^20.0.4",
     "web-ext": "^2.0.0"
   }
 }
