--- a/package.json
+++ b/package.json
@@ -25,17 +25,19 @@
     "url": "https://github.com/hupf/tabmarks/issues"
   },
   "homepage": "https://github.com/hupf/tabmarks#readme",
-  "dependencies": {},
+  "dependencies": {
+    "rxjs": "^5.4.3"
+  },
   "devDependencies": {
     "babel-preset-es2015": "^6.24.1",
     "copy-webpack-plugin": "^4.0.1",
-    "eslint": "^4.5.0",
-    "eslint-config-airbnb-base": "^11.3.2",
+    "eslint": "^4.7.2",
+    "eslint-config-airbnb-base": "^12.0.0",
     "eslint-plugin-import": "^2.7.0",
-    "jest": "^20.0.4",
-    "npm-run-all": "^4.0.2",
+    "jest": "^21.2.0",
+    "npm-run-all": "^4.1.1",
     "web-ext": "^2.0.0",
-    "webpack": "^3.5.5"
+    "webpack": "^3.6.0"
   },
   "jest": {
     "clearMocks": true
