--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,9 +7,7 @@
   "extends": [
     "airbnb-base"
   ],
-  "rules": {
-    "no-console": ["warn", { "allow": ["error"] }]
-  },
+  "rules": {},
   "globals": {
     "jest": true,
     "describe": true,
